[tool.poetry]
name = "rmapipy"
version = "0.1.0"
description = ""
authors = ["V. David Zvenyach <dave@zvenyach.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
pydantic = "^2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
